--- a/roles/prepare/tasks/main.yml
+++ b/roles/prepare/tasks/main.yml
@@ -46,13 +46,13 @@
   shell: "sysctl -p /etc/sysctl.d/95-k8s-sysctl.conf"
   ignore_errors: true
 
-- name: Synchronize time
-  apt:
-    name: ntpdate
-    state: present
+    #- name: Synchronize time
+    # apt:
+    # name: ntpdate
+    #state: present
 
-- name: Sync time with time.windows.com
-  command: ntpdate time.windows.com
+    #- name: Sync time with time.windows.com
+  #  command: ntpdate time.windows.com
 
 - name: Install basic package
   apt: 
