Add grafana fix

--- a/roles/containerd/tasks/main.yml
+++ b/roles/containerd/tasks/main.yml
@@ -16,7 +16,7 @@
    
     - name: Install containerd
       apt:
-        name: containerd.io
+        name: containerd.io=1.6.25-1
         state: present
 
     - name: Configure containerd
