--- a/roles/kube-master/tasks/main.yml
+++ b/roles/kube-master/tasks/main.yml
@@ -5,8 +5,7 @@
       --apiserver-advertise-address={{ k8s_master_ip }} \
       --kubernetes-version {{ k8s_version }} \
       --service-cidr {{ service_cidr }} \
-      --pod-network-cidr {{ pod_network_cidr }} \
-      --cri-socket unix:///run/containerd/containerd.sock
+      --pod-network-cidr {{ pod_network_cidr }} 
   register: init_output
 
 - name: Create .kube directory
