--- a/roles/calico/tasks/main.yaml
+++ b/roles/calico/tasks/main.yaml
@@ -7,7 +7,7 @@
 
 - name: Apply Kubernetes configuration
   ansible.builtin.shell: |
-    kubectl apply -f {{ k8s_apply_calico_file }} 
+    kubectl apply -f {{ k8s_apply_calico_file }}/calico.yaml 
   register: apply_output
 
 - name: Show kubectl apply output
