--- a/roles/cluster-addon/files/kube-prometheus/prometheus-service.yaml
+++ b/roles/cluster-addon/files/kube-prometheus/prometheus-service.yaml
@@ -10,8 +10,10 @@ metadata:
   name: prometheus-k8s
   namespace: monitoring
 spec:
+  type: NodePort
   ports:
   - name: web
+    nodePort: 30990
     port: 9090
     targetPort: web
   - name: reloader-web
