Add service and service monitor

--- a/roles/k8s-cosmos-gaia/tasks/main.yml
+++ b/roles/k8s-cosmos-gaia/tasks/main.yml
@@ -1,10 +1,10 @@
 - name: Copy cosmos-gaia to master node
   ansible.builtin.copy:
-    src: files/statefulset.yaml
-    dest: "{{ k8s_apply_cosmos_file }}"
+    src: files/*.yml
+    dest: "{{ k8s_apply_cosmos_file }}/gaia"
     mode: '0644'
 
 - name: Apply cosmos-gaia
   ansible.builtin.shell: |
-    kubectl apply -f {{ k8s_apply_cosmos_file }}/statefulset.yaml 
+    kubectl apply -f {{ k8s_apply_cosmos_file }}/gaia 
   register: apply_output
