Add kubeadm reset

--- a/roles/cluster-addon/tasks/main.yml
+++ b/roles/cluster-addon/tasks/main.yml
@@ -4,7 +4,7 @@
     dest: "{{ k8s_apply_prometheus_file }}"
     mode: '0644'
 
-- name: Apply eprometheus crd
+- name: Apply prometheus crd
   ansible.builtin.shell: |
     kubectl apply --server-side -f {{ k8s_apply_prometheus_file }}/setup 
   register: apply_output
@@ -16,7 +16,7 @@
     dest: "{{ k8s_apply_prometheus_file }}/kube-prometheus"
     mode: '0644'
 
-- name: Apply eprometheus
+- name: Apply prometheus
   ansible.builtin.shell: |
     kubectl apply -f {{ k8s_apply_prometheus_file }}/kube-prometheus 
   register: apply_output
